# The-Modern-Vulkan-Cookbook

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
source/chapter1/: CMakeLists.txt  main.cpp
source/chapter1/resources/shaders/: test_2triangles.vert
source/chapter1/resources/textures/: texture.dds  texture_mip.dds
source/chapter2/: CMakeLists.txt  mainBindfull.cpp  mainMeshOptimized.cpp  mainMultiDrawIndirect.cpp
source/chapter2/resources/shaders/: Common.glsl  bindfull.frag  bindfull.vert  bindless.frag  bindless.vert  indirectdraw.frag  indirectdraw.vert
source/chapter3/: CMakeLists.txt  FontManager.cpp  FontManager.hpp  mainCullingCompute.cpp  mainGPULines.cpp  mainGPUText.cpp  mainGPUTextSDF.cpp
source/chapter3/resources/shaders/: font.frag  font.vert  gpuLines.frag  gpuLines.vert  gpuLinesDraw.vert  gpuText.vert  gpuTextDraw.frag  gpuTextDraw.vert  gpuculling.comp  indirectdraw.vert
source/chapter4/: CMakeLists.txt  mainDeferred.cpp
source/chapter5/: CMakeLists.txt  mainTransparency.cpp
source/chapter5/resources/shaders/: bindfull.frag  bindfull.vert
source/chapter6/: CMakeLists.txt  mainDLSS.cpp  mainFXAA.cpp  mainMSAA.cpp  mainTAA.cpp
source/chapter6/resources/shaders/: indirectdraw.vert
source/chapter7/: CMakeLists.txt  mainHybridRenderer.cpp  mainRayTracer.cpp
source/chapter8/: settings.gradle.kts
source/chapter8/app/: build.gradle.kts
source/chapter8/app/src/androidTest/java/com/example/openxrsample/: ExampleInstrumentedTest.kt
source/chapter8/app/src/main/: AndroidManifest.xml
source/chapter8/app/src/main/assets/shaders/: Common.glsl  compileshader.bat  indirectdrawMV.frag  indirectdrawMV.vert  indirectdrawMVfrag.spv  indirectdrawMVvert.spv  triangle.vert  trianglefrag.spv  trianglevert.spv
source/chapter8/app/src/main/cpp/: CMakeLists.txt  Common.h  OXRContext.cpp  OXRContext.h  OXRSwapchain.cpp  OXRSwapchain.h  main.cpp  xr_linear.h
source/chapter8/app/src/main/res/values/: strings.xml  themes.xml
source/chapter8/app/src/main/res/values-night/: themes.xml
source/chapter8/app/src/test/java/com/example/openxrsample/: ExampleUnitTest.kt
source/chapter8/gradle/wrapper/: gradle-wrapper.properties
source/common/resources/assets/: Bistro.glb  Planes.glb  Transparency.glb
source/common/resources/envmaps/: meadow_1k.hdr
source/enginecore/: AsyncDataUploader.cpp  AsyncDataUploader.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DLSS.cpp  DLSS.hpp  FPSCounter.hpp  GLBLoader.cpp  GLBLoader.hpp  GLFWUtils.cpp  GLFWUtils.hpp  ImguiManager.cpp  ImguiManager.hpp  Model.cpp  Model.hpp  RayTracer.cpp  RayTracer.hpp  RingBuffer.cpp  RingBuffer.hpp
source/enginecore/passes/: CullingComputePass.cpp  CullingComputePass.hpp  DepthPeeling.cpp  DepthPeeling.hpp  DualDepthPeeling.cpp  DualDepthPeeling.hpp  FXAAPass.cpp  FXAAPass.hpp  FullScreenColorNBlendPass.cpp  FullScreenColorNBlendPass.hpp  FullScreenColorPass.cpp  FullScreenColorPass.hpp  FullScreenPass.cpp  FullScreenPass.hpp  GBufferPass.cpp  GBufferPass.hpp  HierarchicalDepthBufferPass.cpp  HierarchicalDepthBufferPass.hpp  LightData.hpp  LightingPass.cpp  LightingPass.hpp  LightingPassHybridRenderer.cpp  LightingPassHybridRenderer.hpp  NoisePass.cpp  NoisePass.hpp  OitLinkedListPass.cpp  OitLinkedListPass.hpp  OitWeightedPass.cpp  OitWeightedPass.hpp  RayTraceShadowPass.cpp  RayTraceShadowPass.hpp  SSAOPass.cpp  SSAOPass.hpp  SSRIntersectPass.cpp  SSRIntersectPass.hpp  ShadowPass.cpp  ShadowPass.hpp  TAAComputePass.cpp  TAAComputePass.hpp
source/enginecore/resources/shaders/: CommonStructs.glsl  IndirectCommon.glsl  OITLinkedListCompositePass.frag  OitLinkedListBuildPass.frag  OitWeighted.frag  OitWeightedComposite.frag  brdf.glsl  depthPeel.frag  depthPeel.vert  dualDepthPeel.frag  dualDepthPeelFinal.frag  empty.frag  fullscreen.frag  fullscreen.vert  fullscreenColor.frag  fullscreenColor.vert  fullscreenColorBlend.frag  fullscreenColorBlend.vert  fxaa.frag  gbuffer.frag  gbuffer.vert  gpuculling.comp  hierarchicaldepthgen.comp  hybridRenderer_lighting_composite.frag  lighting.frag  noisegen.comp  pbr_gltf.glsl  random.glsl  raytrace_closesthit.rchit  raytrace_closesthit_shadow_hybrid.rchit  raytrace_hdr.glsl  raytrace_miss.rmiss  raytrace_miss_shadow_hybrid.rmiss  raytrace_raygen.rgen  raytrace_raygen_shadow_hybrid.rgen  raytrace_shadow.rmiss  raytrace_struct.glsl  raytrace_utils.glsl  shadowpass.vert  ssao.comp  (+3 more)
source/vulkancore/: Buffer.cpp  Buffer.hpp  CmakeLists.txt  CommandQueueManager.cpp  CommandQueueManager.hpp  Common.cpp  Common.hpp  Context.cpp  Context.hpp  DynamicRendering.cpp  DynamicRendering.hpp  Framebuffer.cpp  Framebuffer.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  Sampler.cpp  Sampler.hpp  ShaderModule.cpp  ShaderModule.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  Utility.cpp  Utility.hpp  vma.cpp
